--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formspree.io/f/xkgjznpg" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form id="contact-form" action="https://formspree.io/f/xkgjznpg" method="POST" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
