--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
           <div class="footer-contact pt-3">
             <p>1st Floor, Inner stop, Above Wagon wheel,</p>
             <p>Inner ring road, Reddy palem, Guntur - 522007</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+91 85558 01835</span></p>
-            <p><strong>Email:</strong> <span>info@vnurtureit.com</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 85558 01835, +91 97055 51427</span></p>
+            <p><strong>Email:</strong> <span>vnurtureit@gmail.com</span></p>
           </div>
         </div>
 
