--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+91 85558 01835</p>
+                  <p>+91 85558 01835, +91 97055 51427 </p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -287,7 +287,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@vnurtureit.com</p>
+                  <p>vnurtureit@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
