--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/vnitw.png" alt="">
+        <img src="assets/img/vnit.png" alt="">
         <h1 class="sitename">VnurtureIT</h1>
       </a>
 
