--- a/index.html
+++ b/index.html
@@ -437,6 +437,25 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <a href="https://wa.me/918555801835" class="whatsapp-float" target="_blank">
+    <img src="assets/img/whatsapp-icon.png" alt="WhatsApp">
+</a>
+
+<style>
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+.whatsapp-float img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+</style>
+
 
 </body>
 
