--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <a href="https://wa.me/918555801835" class="whatsapp-float" target="_blank">
-    <img src="assets/img/whatsapp-icon.png" alt="WhatsApp">
+    <img src="assets/img/whatsapp.png" alt="WhatsApp">
 </a>
 
 <style>
