--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </ul>
           </li>-->
           <li><a href="#contact">Contact</a></li>
+          <li><a href="/Test.html">Online Test</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
