--- a/Test.html
+++ b/Test.html
@@ -182,132 +182,59 @@
   <p>75. Choose the correct preposition: He is afraid ______ spiders.</p>
   <input type="radio" name="english75" value="of"> of <input type="radio" name="english75" value="for"> for <input type="radio" name="english75" value="at"> at <input type="radio" name="english75" value="in"> in<br><br>
 
-  <p>General Knowledge (25 Questions)</p>
-    <p>76. What is the capital of France?</p>
-    <input type="radio" name="gk76" value="Berlin"> Berlin
-    <input type="radio" name="gk76" value="Madrid"> Madrid
-    <input type="radio" name="gk76" value="Paris"> Paris
-    <input type="radio" name="gk76" value="Rome"> Rome<br><br>
-    <p>77. Which planet is known as the "Red Planet"?</p>
-    <input type="radio" name="gk77" value="Venus"> Venus
-    <input type="radio" name="gk77" value="Mars"> Mars
-    <input type="radio" name="gk77" value="Jupiter"> Jupiter
-    <input type="radio" name="gk77" value="Saturn"> Saturn<br><br>
-    <p>78. What is the largest ocean on Earth?</p>
-    <input type="radio" name="gk78" value="Atlantic"> Atlantic
-    <input type="radio" name="gk78" value="Indian"> Indian
-    <input type="radio" name="gk78" value="Arctic"> Arctic
-    <input type="radio" name="gk78" value="Pacific"> Pacific<br><br>
-    <p>79. Who wrote the play "Hamlet"?</p>
-     <input type="radio" name="gk79" value="Charles Dickens"> Charles Dickens
-    <input type="radio" name="gk79" value="William Shakespeare"> William Shakespeare
-    <input type="radio" name="gk79" value="Jane Austen"> Jane Austen
-    <input type="radio" name="gk79" value="Mark Twain"> Mark Twain<br><br>
-    <p>80. What is the chemical symbol for gold?</p>
-    <input type="radio" name="gk80" value="Ag"> Ag
-    <input type="radio" name="gk80" value="Fe"> Fe
-    <input type="radio" name="gk80" value="Au"> Au
-    <input type="radio" name="gk80" value="Hg"> Hg<br><br>
-    <p>81. Which country is home to the kangaroo?</p>
-    <input type="radio" name="gk81" value="India"> India
-    <input type="radio" name="gk81" value="Australia"> Australia
-    <input type="radio" name="gk81" value="Brazil"> Brazil
-    <input type="radio" name="gk81" value="South Africa"> South Africa<br><br>
-    <p>82. What is the tallest mountain in the world?</p>
-    <input type="radio" name="gk82" value="K2"> K2
-    <input type="radio" name="gk82" value="Kangchenjunga"> Kangchenjunga
-    <input type="radio" name="gk82" value="Lhotse"> Lhotse
-    <input type="radio" name="gk82" value="Mount Everest"> Mount Everest<br><br>
-    <p>83. Who painted the Mona Lisa?</p>
-    <input type="radio" name="gk83" value="Vincent van Gogh"> Vincent van Gogh
-    <input type="radio" name="gk83" value="Pablo Picasso"> Pablo Picasso
-    <input type="radio" name="gk83" value="Leonardo da Vinci"> Leonardo da Vinci
-     <input type="radio" name="gk83" value="Claude Monet"> Claude Monet<br><br>
-    <p>84. What is the currency of Japan?</p>
-    <input type="radio" name="gk84" value="Won"> Won
-    <input type="radio" name="gk84" value="Yen"> Yen
-    <input type="radio" name="gk84" value="Ringgit"> Ringgit
-    <input type="radio" name="gk84" value="Baht"> Baht<br><br>
-    <p>85. Which gas do plants absorb from the atmosphere?</p>
-    <input type="radio" name="gk85" value="Oxygen"> Oxygen
-    <input type="radio" name="gk85" value="Carbon Dioxide"> Carbon Dioxide
-    <input type="radio" name="gk85" value="Nitrogen"> Nitrogen
-    <input type="radio" name="gk85" value="Hydrogen"> Hydrogen<br><br>
-    <p>86. What is the largest planet in our solar system?</p>
-    <input type="radio" name="gk86" value="Mars"> Mars
-    <input type="radio" name="gk86" value="Saturn"> Saturn
-    <input type="radio" name="gk86" value="Jupiter"> Jupiter
-    <input type="radio" name="gk86" value="Neptune"> Neptune<br><br>
-    <p>87. Who developed the theory of relativity?</p>
-    <input type="radio" name="gk87" value="Isaac Newton"> Isaac Newton
-    <input type="radio" name="gk87" value="Albert Einstein"> Albert Einstein
-    <input type="radio" name="gk87" value="Galileo Galilei"> Galileo Galilei
-    <input type="radio" name="gk87" value="Stephen Hawking"> Stephen Hawking<br><br>
-    <p>88. What is the chemical symbol for water?</p>
-    <input type="radio" name="gk88" value="CO2"> CO2
-    <input type="radio" name="gk88" value="H2O"> H2O
-    <input type="radio" name="gk88" value="NaCl"> NaCl
-    <input type="radio" name="gk88" value="O2"> O2<br><br>
-    <p>89. Which continent is known as the "Dark Continent"?</p>
-     <input type="radio" name="gk89" value="South America"> South America
-    <input type="radio" name="gk89" value="Africa"> Africa
-    <input type="radio" name="gk89" value="Asia"> Asia
-    <input type="radio" name="gk89" value="Australia"> Australia<br><br>
-    <p>90. What is the smallest country in the world?</p>
-    <input type="radio" name="gk90" value="Monaco"> Monaco
-    <input type="radio" name="gk90" value="Vatican City"> Vatican City
-    <input type="radio" name="gk90" value="Nauru"> Nauru
-    <input type="radio" name="gk90" value="Tuvalu"> Tuvalu<br><br>
-    <p>91. Who invented the telephone?</p>
-    <input type="radio" name="gk91" value="Thomas Edison"> Thomas Edison
-    <input type="radio" name="gk91" value="Alexander Graham Bell"> Alexander Graham Bell
-    <input type="radio" name="gk91" value="Nikola Tesla"> Nikola Tesla
-    <input type="radio" name="gk91" value="Guglielmo Marconi"> Guglielmo Marconi<br><br>
-    <p>92. What is the speed of light in a vacuum?</p>
-    <input type="radio" name="gk92" value="200,000 km/s"> 200,000 km/s
-    <input type="radio" name="gk92" value="300,000 km/s"> 300,000 km/s
-    <input type="radio" name="gk92" value="400,000 km/s"> 400,000 km/s
-    <input type="radio" name="gk92" value="500,000 km/s"> 500,000 km/s<br><br>
-    <p>93. Which river is known as the "Lifeline of Egypt"?</p>
-    <input type="radio" name="gk93" value="Tigris"> Tigris
-    <input type="radio" name="gk93" value="Euphrates"> Euphrates
-    <input type="radio" name="gk93" value="Nile"> Nile
-    <input type="radio" name="gk93" value="Amazon"> Amazon<br><br>
-    <p>94. What is the largest desert in the world?</p>
-    <input type="radio" name="gk94" value="Sahara"> Sahara
-    <input type="radio" name="gk94" value="Arctic"> Arctic
-    <input type="radio" name="gk94" value="Antarctic"> Antarctic
-    <input type="radio" name="gk94" value="Arabian"> Arabian<br><br>
-    <p>95. Who was the first person to walk on the moon?</p>
-    <input type="radio" name="gk95" value="Buzz Aldrin"> Buzz Aldrin
-    <input type="radio" name="gk95" value="Neil Armstrong"> Neil Armstrong
-    <input type="radio" name="gk95" value="Michael Collins"> Michael Collins
-    <input type="radio" name="gk95" value="Yuri Gagarin"> Yuri Gagarin<br><br>
-     <p>96. What is the chemical symbol for table salt?</p>
-    <input type="radio" name="gk96" value="KCl"> KCl
-    <input type="radio" name="gk96" value="NaCl"> NaCl
-    <input type="radio" name="gk96" value="CaCl2"> CaCl2
-    <input type="radio" name="gk96" value="MgCl2"> MgCl2<br><br>
-    <p>97. Which city is known as the "City of Love"?</p>
-    <input type="radio" name="gk97" value="Venice"> Venice
-    <input type="radio" name="gk97" value="Paris"> Paris
-    <input type="radio" name="gk97" value="Rome"> Rome
-    <input type="radio" name="gk97" value="Barcelona"> Barcelona<br><br>
-    <p>98. What is the boiling point of water?</p>
-    <input type="radio" name="gk98" value="0°C"> 0°C
-    <input type="radio" name="gk98" value="100°C"> 100°C
-    <input type="radio" name="gk98" value="212°F"> 212°F
-    <input type="radio" name="gk98" value="373K"> 373K<br><br>
-    <p>99. Who is the author of "To Kill a Mockingbird"?</p>
-    <input type="radio" name="gk99" value="Harper Lee"> Harper Lee
-    <input type="radio" name="gk99" value="George Orwell"> George Orwell
-    <input type="radio" name="gk99" value="J.D. Salinger"> J.D. Salinger
-    <input type="radio" name="gk99" value="F. Scott Fitzgerald"> F. Scott Fitzgerald<br><br>
-    <p>100. What is the name of the galaxy that contains our solar system?</p>
-    <input type="radio" name="gk100" value="Andromeda"> Andromeda
-    <input type="radio" name="gk100" value="Milky Way"> Milky Way
-    <input type="radio" name="gk100" value="Triangulum"> Triangulum
-    <input type="radio" name="gk100" value="Whirlpool"> Whirlpool<br><br>
+  <p>SQL (25 Questions)</p>
+    <p>76. Which SQL keyword is used to retrieve data from a database?</p>
+    <input type="radio" name="sql76" value="SELECT"> SELECT <input type="radio" name="sql76" value="GET"> GET <input type="radio" name="sql76" value="FETCH"> FETCH <input type="radio" name="sql76" value="RETRIEVE"> RETRIEVE<br><br>
+    <p>77. Which SQL clause is used to sort the result-set?</p>
+    <input type="radio" name="sql77" value="SORT BY"> SORT BY <input type="radio" name="sql77" value="ORDER BY"> ORDER BY <input type="radio" name="sql77" value="GROUP BY"> GROUP BY <input type="radio" name="sql77" value="ARRANGE BY"> ARRANGE BY<br><br>
+    <p>78. Which SQL clause is used to filter records?</p>
+    <input type="radio" name="sql78" value="FILTER"> FILTER <input type="radio" name="sql78" value="WHERE"> WHERE <input type="radio" name="sql78" value="HAVING"> HAVING <input type="radio" name="sql78" value="CONDITIONS"> CONDITIONS<br><br>
+    <p>79. Which SQL statement is used to insert new data into a database?</p>
+    <input type="radio" name="sql79" value="ADD RECORD"> ADD RECORD <input type="radio" name="sql79" value="INSERT INTO"> INSERT INTO <input type="radio" name="sql79" value="NEW RECORD"> NEW RECORD <input type="radio" name="sql79" value="PUT RECORD"> PUT RECORD<br><br>
+    <p>80. Which SQL statement is used to modify existing data in a database?</p>
+    <input type="radio" name="sql80" value="MODIFY"> MODIFY <input type="radio" name="sql80" value="UPDATE"> UPDATE <input type="radio" name="sql80" value="CHANGE"> CHANGE <input type="radio" name="sql80" value="ALTER"> ALTER<br><br>
+    <p>81. Which SQL statement is used to delete data from a database?</p>
+    <input type="radio" name="sql81" value="REMOVE FROM"> REMOVE FROM <input type="radio" name="sql81" value="DELETE FROM"> DELETE FROM <input type="radio" name="sql81" value="DROP RECORD"> DROP RECORD <input type="radio" name="sql81" value="ERASE FROM"> ERASE FROM<br><br>
+    <p>82. Which SQL clause is used to group rows that have the same values into summary rows?</p>
+    <input type="radio" name="sql82" value="GROUP BY"> GROUP BY <input type="radio" name="sql82" value="SORT BY"> SORT BY <input type="radio" name="sql82" value="ORDER BY"> ORDER BY <input type="radio" name="sql82" value="SUMMARIZE BY"> SUMMARIZE BY<br><br>
+    <p>83. Which SQL clause is used to filter aggregated data?</p>
+    <input type="radio" name="sql83" value="WHERE"> WHERE <input type="radio" name="sql83" value="FILTER"> FILTER <input type="radio" name="sql83" value="HAVING"> HAVING <input type="radio" name="sql83" value="GROUP BY"> GROUP BY<br><br>
+    <p>84. Which SQL keyword is used to combine rows from two or more tables, based on a related column between them?</p>
+    <input type="radio" name="sql84" value="COMBINE"> COMBINE <input type="radio" name="sql84" value="JOIN"> JOIN <input type="radio" name="sql84" value="MERGE"> MERGE <input type="radio" name="sql84" value="LINK"> LINK<br><br>
+    <p>85. Which type of JOIN returns records that have matching values in both tables?</p>
+    <input type="radio" name="sql85" value="LEFT JOIN"> LEFT JOIN <input type="radio" name="sql85" value="INNER JOIN"> INNER JOIN <input type="radio" name="sql85" value="RIGHT JOIN"> RIGHT JOIN <input type="radio" name="sql85" value="FULL JOIN"> FULL JOIN<br><br>
+    <p>86. Which type of JOIN returns all records from the left table, and the matched records from the right table?</p>
+    <input type="radio" name="sql86" value="LEFT JOIN"> LEFT JOIN <input type="radio" name="sql86" value="INNER JOIN"> INNER JOIN <input type="radio" name="sql86" value="RIGHT JOIN"> RIGHT JOIN <input type="radio" name="sql86" value="FULL JOIN"> FULL JOIN<br><br>
+    <p>87. Which SQL function returns the average value of a numeric column?</p>
+    <input type="radio" name="sql87" value="AVERAGE()"> AVERAGE() <input type="radio" name="sql87" value="AVG()"> AVG() <input type="radio" name="sql87" value="MEAN()"> MEAN() <input type="radio" name="sql87" value="AVR()"> AVR()<br><br>
+    <p>88. Which SQL function returns the number of rows?</p>
+    <input type="radio" name="sql88" value="NUMBER()"> NUMBER() <input type="radio" name="sql88" value="COUNT()"> COUNT() <input type="radio" name="sql88" value="ROWS()"> ROWS() <input type="radio" name="sql88" value="TOTAL()"> TOTAL()<br><br>
+    <p>89. Which SQL operator is used to specify a range of values?</p>
+    <input type="radio" name="sql89" value="RANGE"> RANGE <input type="radio" name="sql89" value="BETWEEN"> BETWEEN <input type="radio" name="sql89" value="LIMIT"> LIMIT <input type="radio" name="sql89" value="SPAN"> SPAN<br><br>
+    <p>90. Which SQL operator is used to specify multiple values in a WHERE clause?</p>
+    <input type="radio" name="sql90" value="MANY"> MANY <input type="radio" name="sql90" value="IN"> IN <input type="radio" name="sql90" value="VALUES"> VALUES <input type="radio" name="sql90" value="LIST"> LIST<br><br>
+    <p>91. Which SQL operator is used for pattern matching?</p>
+    <input type="radio" name="sql91" value="MATCH"> MATCH <input type="radio" name="sql91" value="PATTERN"> PATTERN <input type="radio" name="sql91" value="LIKE"> LIKE <input type="radio" name="sql91" value="SIMILAR"> SIMILAR<br><br>
+    <p>92. Which SQL keyword is used to return only distinct (different) values?</p>
+    <input type="radio" name="sql92" value="UNIQUE"> UNIQUE <input type="radio" name="sql92" value="DISTINCT"> DISTINCT <input type="radio" name="sql92" value="DIFFERENT"> DIFFERENT <input type="radio" name="sql92" value="SINGLE"> SINGLE<br><br>
+    <p>93. What does DDL stand for?</p>
+    <input type="radio" name="sql93" value="Data Definition Language"> Data Definition Language <input type="radio" name="sql93" value="Data Description Language"> Data Description Language <input type="radio" name="sql93" value="Database Definition Language"> Database Definition Language <input type="radio" name="sql93" value="Dynamic Data Language"> Dynamic Data Language<br><br>
+    <p>94. What does DML stand for?</p>
+    <input type="radio" name="sql94" value="Data Manipulation Language"> Data Manipulation Language <input type="radio" name="sql94" value="Data Management Language"> Data Management Language <input type="radio" name="sql94" value="Database Manipulation Language"> Database Manipulation Language <input type="radio" name="sql94" value="Dynamic Manipulation Language"> Dynamic Manipulation Language<br><br>
+    <p>95. Which SQL statement is used to create a new database?</p>
+    <input type="radio" name="sql95" value="CREATE DATABASE"> CREATE DATABASE <input type="radio" name="sql95" value="NEW DATABASE"> NEW DATABASE <input type="radio" name="sql95" value="MAKE DATABASE"> MAKE DATABASE <input type="radio" name="sql95" value="BUILD DATABASE"> BUILD DATABASE<br><br>
+    <p>96. Which SQL statement is used to create a new table in a database?</p>
+    <input type="radio" name="sql96" value="CREATE TABLE"> CREATE TABLE <input type="radio" name="sql96" value="NEW TABLE"> NEW TABLE <input type="radio" name="sql96" value="MAKE TABLE"> MAKE TABLE <input type="radio" name="sql96" value="BUILD TABLE"> BUILD TABLE<br><br>
+    <p>97. Which SQL statement is used to modify an existing table?</p>
+    <input type="radio" name="sql97" value="MODIFY TABLE"> MODIFY TABLE <input type="radio" name="sql97" value="ALTER TABLE"> ALTER TABLE <input type="radio" name="sql97" value="CHANGE TABLE"> CHANGE TABLE <input type="radio" name="sql97" value="UPDATE TABLE"> UPDATE TABLE<br><br>
+    <p>98. Which SQL constraint uniquely identifies each record in a table?</p>
+    <input type="radio" name="sql98" value="UNIQUE KEY"> UNIQUE KEY <input type="radio" name="sql98" value="PRIMARY KEY"> PRIMARY KEY <input type="radio" name="sql98" value="UNIQUE RECORD"> UNIQUE RECORD <input type="radio" name="sql98" value="MAIN KEY"> MAIN KEY<br><br>
+    <p>99. Which SQL constraint is used to prevent actions that would destroy links between tables?</p>
+    <input type="radio" name="sql99" value="RELATION KEY"> RELATION KEY <input type="radio" name="sql99" value="FOREIGN KEY"> FOREIGN KEY <input type="radio" name="sql99" value="LINK KEY"> LINK KEY <input type="radio" name="sql99" value="CONNECT KEY"> CONNECT KEY<br><br>
+    <p>100. Which SQL statement is used to create indexes?</p>
+    <input type="radio" name="sql100" value="CREATE INDEX"> CREATE INDEX <input type="radio" name="sql100" value="BUILD INDEX"> BUILD INDEX <input type="radio" name="sql100" value="MAKE INDEX"> MAKE INDEX <input type="radio" name="sql100" value="INDEX"> INDEX<br><br>
+
+   
   <input type="submit" value="Submit">
    </form>
 
