--- a/Test.html
+++ b/Test.html
@@ -22,6 +22,11 @@
    <h1>Test - VnurtureIT</h1>
 
    <form action="https://script.google.com/macros/s/AKfycbyQJs4I_-o8LnlPys0W6GWTEqSgLlFuts-SKsvsphDLzX8beUC0TrIseqAYrsXNEcU/exec" method="post">
+    <label for="name">Name:</label>
+<input type="text" id="name" name="Name" required><br>
+
+<label for="email">Email:</label>
+<input type="email" id="email" name="Email" required><br>
    
   <p>Aptitude (25 Questions)</p>
   <p>1. If a train travels 120 km in 2 hours, what is its speed in km/hr?</p>
