--- a/Test.html
+++ b/Test.html
@@ -242,7 +242,7 @@
                 params.append(key, value.trim()); // Ensure no extra spaces
             }
 
-            fetch("YOUR_GOOGLE_SCRIPT_URL_HERE", {
+            fetch("https://script.google.com/macros/s/AKfycbyQJs4I_-o8LnlPys0W6GWTEqSgLlFuts-SKsvsphDLzX8beUC0TrIseqAYrsXNEcU/exec", {
                 method: "POST",
                 body: params
             })
